<resources>
    <plurals name="runtime_format">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="vote_count_text">
        <item quantity="one">(%d vote)</item>
        <item quantity="other">(%d votes)</item>
    </plurals>
    <string name="app_name">Movie Catalogue</string>
    <string name="setting_title">Settings</string>
    <string name="movie_banner_content_description">Movie Banner</string>
    <string name="fact_label">Some Facts!</string>
    <string name="budget_label">Budget</string>
    <string name="revenue_label">Revenue</string>
    <string name="runtime_label">Runtime</string>
    <string name="status_label">Status</string>

    <string name="original_language_label">Original Language</string>
    <string name="menu_settings">Settings</string>
    <string name="movie_view_pager_label">Movies</string>

    <string name="tv_show_view_pager_label">TV Series</string>
    <string name="favorite_view_pager_label">Favorite</string>
    <string name="movie_rate_text_example" translatable="false">8.7</string>
    <string name="movie_vote_count_text_example" translatable="false">(1000 votesss)</string>
    <string name="movie_name_example" translatable="false">The Girl in the Spider\'s Webstorm ft PHPStorm</string>
    <string name="release_year_example" translatable="false">2018</string>
    <string name="genres_example" translatable="false">Comedy, Action</string>
    <string name="revenue_example" translatable="false">$1,143,689,193.00</string>
    <string name="budget_example" translatable="false">$160,000,000.00</string>
    <string name="runtime_example" translatable="false">2h 24m</string>

    <string name="original_language_example" translatable="false">English</string>
    <string name="movie_overview_example" translatable="false">In Stockholm, Sweden, hacker Lisbeth Salander is hired by Frans Balder, a computer engineer, to retrieve a program that he believes it is too dangerous to exist.</string>
    <string name="extra_data_base_movie_id" translatable="false">extra_data_movie_id</string>

    <string name="status_continued">Continue</string>
    <string name="no_movie_title">No Movie Found</string>
    <string name="dash">-</string>
    <string name="extra_data_base_movie_title" translatable="false">extra_data_movie_title</string>
    <string name="extra_data_base_movie_type" translatable="false">extra_data_movie_type</string>
    <string name="text_with_bracket" translatable="false">(%1$s)</string>
    <string name="no_overview_text">No overview provided</string>
    <string name="failure_get_base_movie_message">Aww, I failed to get movies for you. Pull to try again\n(Server in trouble)</string>

    <string name="language_pref_category">Language</string>
    <string name="language_pref_key" translatable="false">language</string>
    <string name="language_pref_title">🇬🇧 \tEnglish</string>
    <string name="reminder_notification_pref_category">Notification</string>
    <string name="daily_reminder_pref_key" translatable="false">daily_reminder</string>
    <string name="daily_reminder_pref_title">Daily Reminder</string>
    <string name="daily_reminder_pref_summary">Get daily reminder to check the app</string>

    <string name="release_reminder_pref_key" translatable="false">release_notification</string>
    <string name="release_reminder_pref_title">Release Notification</string>
    <string name="release_reminder_pref_summary">Get this week release film notification</string>
    <string name="notification_unavailable">Notification service not available on your device</string>
    <string name="daily_reminder_notification_title">Go, Open This App!</string>
    <string name="daily_reminder_notification_message">You don\'t want to miss latest movies, do you?</string>
    <string name="daily_reminder_notification_channel_name">Daily Reminder</string>

    <string name="release_notification_title">%1$s, Release Today!</string>
    <string name="empty_release_notification_title">No Movie Release Today!</string>
    <string name="release_notification_message">Tap for detail information</string>
    <string name="release_notification_channel_name">Release Film Notification</string>
    <string name="icon_creator">Icons made by Dimi Kazak (Flat Icon)</string>
    <string name="icon_creator_key" translatable="false">pref_static_field_key</string>
    <string name="search_film_menu_title">Search Film</string>
    <string name="search_hint">Search by film name</string>
    <string name="empty_base_movie_message">Movie/Tv Show not found.\nTry with difference keyword</string>
    <string name="search_activity_title">Film Search</string>
</resources>
