<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_fact_detail_label"
        android:text="@string/fact_label"
        style="@style/SectionsStyle"
        app:layout_constraintLeft_toLeftOf="@+id/tv_movie_overview_detail"
        app:layout_constraintStart_toStartOf="@+id/tv_movie_overview_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_overview_detail" />

    <TextView
        android:id="@+id/tv_original_language_detail_label"
        style="@style/FactsLabelStyle"
        android:text="@string/original_language_label"
        app:layout_constraintLeft_toLeftOf="@+id/tv_fact_detail_label"
        app:layout_constraintStart_toStartOf="@+id/tv_fact_detail_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_fact_detail_label" />

    <TextView
        android:id="@+id/tv_runtime_detail_label"
        style="@style/FactsLabelStyle"
        android:text="@string/runtime_label"
        app:layout_constraintLeft_toLeftOf="@+id/tv_original_language_detail_label"
        app:layout_constraintStart_toStartOf="@+id/tv_original_language_detail_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_original_language_detail_label" />

    <TextView
        android:id="@+id/tv_revenue_detail_label"
        style="@style/FactsLabelStyle"
        android:text="@string/revenue_label"
        app:layout_constraintLeft_toLeftOf="@+id/tv_runtime_detail_label"
        app:layout_constraintStart_toStartOf="@+id/tv_runtime_detail_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_runtime_detail_label" />

    <TextView
        android:id="@+id/tv_budget_detail_label"
        style="@style/FactsLabelStyle"
        android:text="@string/budget_label"
        app:layout_constraintLeft_toLeftOf="@+id/tv_revenue_detail_label"
        app:layout_constraintStart_toStartOf="@+id/tv_revenue_detail_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_revenue_detail_label" />

    <TextView
        android:id="@+id/tv_budget_detail"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        app:layout_constraintLeft_toRightOf="@id/fact_section_barrier_detail"
        app:layout_constraintStart_toEndOf="@id/fact_section_barrier_detail"
        app:layout_constraintTop_toTopOf="@id/tv_budget_detail_label"
        tools:text="@string/budget_example" />

    <TextView
        android:id="@+id/tv_original_language_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toRightOf="@id/fact_section_barrier_detail"
        app:layout_constraintStart_toEndOf="@id/fact_section_barrier_detail"
        app:layout_constraintTop_toTopOf="@id/tv_original_language_detail_label"
        tools:text="@string/original_language_example" />

    <TextView
        android:id="@+id/tv_runtime_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toRightOf="@id/fact_section_barrier_detail"
        app:layout_constraintStart_toEndOf="@id/fact_section_barrier_detail"
        app:layout_constraintTop_toTopOf="@id/tv_runtime_detail_label"
        tools:text="@string/runtime_example" />

    <TextView
        android:id="@+id/tv_revenue_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toRightOf="@id/fact_section_barrier_detail"
        app:layout_constraintStart_toEndOf="@id/fact_section_barrier_detail"
        app:layout_constraintTop_toTopOf="@id/tv_revenue_detail_label"
        tools:text="@string/revenue_example" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/fact_section_barrier_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="tv_revenue_detail_label,tv_budget_detail_label,tv_runtime_detail_label,tv_original_language_detail_label"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="16dp" />
</merge>