<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_fact_detail_label"
        android:text="@string/fact_label"
        style="@style/SectionsStyle"
        app:layout_constraintLeft_toLeftOf="@+id/tv_movie_overview_detail"
        app:layout_constraintStart_toStartOf="@+id/tv_movie_overview_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_overview_detail" />

    <TextView
        android:id="@+id/tv_original_language_detail_label"
        style="@style/FactsLabelStyle"
        android:text="@string/original_language_label"
        app:layout_constraintLeft_toLeftOf="@+id/tv_fact_detail_label"
        app:layout_constraintStart_toStartOf="@+id/tv_fact_detail_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_fact_detail_label" />

    <TextView
        android:id="@+id/tv_status_detail_label"
        style="@style/FactsLabelStyle"
        android:text="@string/status_label"
        app:layout_constraintLeft_toLeftOf="@+id/tv_original_language_detail_label"
        app:layout_constraintStart_toStartOf="@+id/tv_original_language_detail_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_original_language_detail_label" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/fact_section_barrier_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="tv_status_detail_label, tv_runtime_detail_label, tv_original_language_detail_label" />

    <TextView
        android:id="@+id/tv_original_language_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toRightOf="@id/fact_section_barrier_detail"
        app:layout_constraintStart_toEndOf="@id/fact_section_barrier_detail"
        app:layout_constraintTop_toTopOf="@id/tv_original_language_detail_label"
        tools:text="@string/original_language_example" />

    <TextView
        android:id="@+id/tv_status_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toRightOf="@id/fact_section_barrier_detail"
        app:layout_constraintStart_toEndOf="@id/fact_section_barrier_detail"
        app:layout_constraintTop_toTopOf="@id/tv_status_detail_label"
        tools:text="@string/status_continued" />

</merge>