<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".DetailActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/iv_banner_movie_detail"
            android:layout_width="150dp"
            android:layout_height="225dp"
            android:contentDescription="@string/movie_banner_content_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_movie_title_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_banner_movie_detail"
            app:layout_constraintTop_toTopOf="@+id/iv_banner_movie_detail"
            tools:text="@string/movie_name_example" />

        <TextView
            android:id="@+id/tv_movie_release_year_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toStartOf="@+id/tv_movie_title_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_title_detail"
            tools:text="@string/release_year_example" />

        <RatingBar
            android:id="@+id/rb_movie_review_score_detail"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:isIndicator="true"
            android:numStars="5"
            app:layout_constraintStart_toStartOf="@+id/tv_movie_release_year_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_release_year_detail"
            tools:rating="4.5" />

        <TextView
            android:id="@+id/tv_movie_review_score_text_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="@+id/rb_movie_review_score_detail"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rb_movie_review_score_detail"
            tools:text="@string/movie_rate_text_example" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tv_movie_review_score_text_detail"
            app:layout_constraintStart_toEndOf="@+id/tv_movie_review_score_text_detail"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:text="@string/movie_rate_text_basis" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/top_barrier_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="iv_banner_movie_detail, rb_movie_review_score_detail, tv_movie_review_score_text_detail" />

        <TextView
            android:id="@+id/tv_overview_label"
            android:text="@string/overview_label"
            style="@style/SectionsStyle"
            app:layout_constraintLeft_toLeftOf="@+id/iv_banner_movie_detail"
            app:layout_constraintStart_toStartOf="@+id/iv_banner_movie_detail"
            app:layout_constraintTop_toTopOf="@+id/top_barrier_detail" />

        <TextView
            android:id="@+id/tv_movie_overview_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_overview_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview_label"
            tools:text="@string/movie_overview_example" />

        <TextView
            android:id="@+id/tv_fact_detail_label"
            android:text="@string/fact_label"
            style="@style/SectionsStyle"
            app:layout_constraintLeft_toLeftOf="@+id/tv_movie_overview_detail"
            app:layout_constraintStart_toStartOf="@+id/tv_movie_overview_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_overview_detail" />

        <TextView
            android:id="@+id/tv_original_language_detail_label"
            style="@style/FactsLabelStyle"
            android:text="@string/original_language_label"
            app:layout_constraintLeft_toLeftOf="@+id/tv_fact_detail_label"
            app:layout_constraintStart_toStartOf="@+id/tv_fact_detail_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_fact_detail_label" />

        <TextView
            android:id="@+id/tv_runtime_detail_label"
            style="@style/FactsLabelStyle"
            android:text="@string/runtime_label"
            app:layout_constraintLeft_toLeftOf="@+id/tv_original_language_detail_label"
            app:layout_constraintStart_toStartOf="@+id/tv_original_language_detail_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_original_language_detail_label" />

        <TextView
            android:id="@+id/tv_revenue_detail_label"
            style="@style/FactsLabelStyle"
            android:text="@string/revenue_label"
            app:layout_constraintLeft_toLeftOf="@+id/tv_runtime_detail_label"
            app:layout_constraintStart_toStartOf="@+id/tv_runtime_detail_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_runtime_detail_label" />

        <TextView
            android:id="@+id/tv_budget_detail_label"
            style="@style/FactsLabelStyle"
            android:text="@string/budget_label"
            app:layout_constraintLeft_toLeftOf="@+id/tv_revenue_detail_label"
            app:layout_constraintStart_toStartOf="@+id/tv_revenue_detail_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_revenue_detail_label" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/fact_section_barrier_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="tv_revenue_detail_label, tv_budget_detail_label, tv_runtime_detail_label, tv_original_language_detail_label" />

        <TextView
            android:id="@+id/tv_original_language_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toRightOf="@id/fact_section_barrier_detail"
            app:layout_constraintStart_toEndOf="@id/fact_section_barrier_detail"
            app:layout_constraintTop_toTopOf="@id/tv_original_language_detail_label"
            tools:text="@string/original_language_example" />

        <TextView
            android:id="@+id/tv_runtime_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toRightOf="@id/fact_section_barrier_detail"
            app:layout_constraintStart_toEndOf="@id/fact_section_barrier_detail"
            app:layout_constraintTop_toTopOf="@id/tv_runtime_detail_label"
            tools:text="@string/runtime_example" />

        <TextView
            android:id="@+id/tv_revenue_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toRightOf="@id/fact_section_barrier_detail"
            app:layout_constraintStart_toEndOf="@id/fact_section_barrier_detail"
            app:layout_constraintTop_toTopOf="@id/tv_revenue_detail_label"
            tools:text="@string/revenue_example" />

        <TextView
            android:id="@+id/tv_budget_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toRightOf="@id/fact_section_barrier_detail"
            app:layout_constraintStart_toEndOf="@id/fact_section_barrier_detail"
            app:layout_constraintTop_toTopOf="@id/tv_budget_detail_label"
            tools:text="@string/budget_example" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>